force-app/main/default/objects/SIMSettings__c/SIMSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>SIMSettings</label>
</CustomObject>