force-app/main/default/objects/SIMSettings__c/fields/SIMAuthURL__c.field-meta.xml
<CustomField>
    <fullName>SIMAuthURL__c</fullName>
    <label>SIMAuthURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>