force-app/main/default/objects/SIMSettings__c/fields/SIMInstanceName__c.field-meta.xml
<CustomField>
    <fullName>SIMInstanceName__c</fullName>
    <label>SIMInstanceName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>