force-app/main/default/objects/SIMSettings__c/fields/SIMPassword__c.field-meta.xml
<CustomField>
    <fullName>SIMPassword__c</fullName>
    <label>SIMPassword</label>
    <length>100</length>
    <type>Text</type>
</CustomField>