force-app/main/default/objects/SIMSettings__c/fields/SIMURL__c.field-meta.xml
<CustomField>
    <fullName>SIMURL__c</fullName>
    <label>SIMURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>