force-app/main/default/objects/SIMSettings__c/fields/SIMUser__c.field-meta.xml
<CustomField>
    <fullName>SIMUser__c</fullName>
    <label>SIMUser</label>
    <length>100</length>
    <type>Text</type>
</CustomField>